# component-search-app

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compilar.bat  emails.json  empresas.csv  empresas.xlsx  iniciar_coletor.bat  iniciar_coletor.sh  iniciar_monitoramento.bat  iniciar_monitoramento.sh  iniciar_robo.bat  iniciar_robo_simples.bat  iniciar_robo_simples.sh  instalar_dependencias.bat  main.py  pyproject.toml  requirements.txt  setup.cfg  visited.json
config/: settings.py
data/: emails.json  processed_terms.json  visited.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  database_design.md
output/: empresas.xlsx
scripts/: README.md  baixar_chromedriver.py  baixar_python.py  verificar_instalacao.py  verificar_instalacao_chrome.py  verificar_instalacao_python.py
scripts/database/: create_db_simple.py  load_initial_data.py  migrate_numero_complemento.py
scripts/monitoring/: advanced_monitor.py  realtime_monitor.py
scripts/reports/: methods_comparison_report.py
scripts/setup/: create_database.bat  create_database.sh  generate_methods_comparison.bat  generate_methods_comparison.sh  install_dependencies.bat  install_dependencies.sh  install_pyodbc.bat  install_pyodbc.sh
scripts/utils/: export_excel.py  reset_data.py  show_stats.py
scripts/verification/: download_python.py  verify_brave_installation.py  verify_chrome_installation.py  verify_chromedriver.py  verify_python_installation.py
src/: __init__.py  __version__.py
src/application/: __init__.py  email_application_service.py  email_robot_service.py
src/application/services/: address_enrichment_application_service.py  cep_enrichment_application_service.py  chromedriver_manager.py  data_manager.py  database_service.py  email_application_service.py  excel_application_service.py  geolocation_application_service.py  search_term_factory.py  user_config_service.py
src/domain/: __init__.py  email_processor.py  email_service.py
src/domain/models/: address_model.py  (+7 more)
src/infrastructure/: __init__.py  web_driver.py
src/resources/: application.yaml
src/web/: README.md  __init__.py  config.py  dashboard_server.py
tests/: .coveragerc  conftest.py  pytest.ini  requirements-test.txt  run_coverage.bat  run_tests.bat  run_tests.sh
tests/fixtures/: sample_data.py
tests/reports/: .gitignore
tests/unit/: test_version.py
tests/utils/: test_helpers.py
(+92 files in other folders)
