[project]
name = "python-search-app"
version = "4.0.1"
description = "Aplicação Python para coleta de e-mails e geolocalização com sistema de controle de tarefas"
authors = [{ name = "Developer", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "selenium>=4.15.0",
    "openpyxl>=3.1.0",
    "tldextract>=5.0.0",
    "requests>=2.32.4",
    "pyyaml>=6.0",
    "pyodbc>=4.0.0",
    "pywin32>=306; sys_platform == 'win32'"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]